# computer-graphic-hw2

./: .gitignore  Cargo.toml
src/: camera.rs  light.rs  main.rs  mesh.rs  scene_obj.rs
src/models/Ivysaur/: Ivysaur.mtl
src/shaders/: fixed_color.fs  fixed_color.vs  gouraud_shading.fs  gouraud_shading.vs  gouraud_shading_demo.vs  phong_shading.fs  phong_shading.vs  point_light.fs
