[package]
name = "hw3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { version = "0.30.2", default-features = true }
imgui = {version = "0.8.2", features = ["tables-api"]}
imgui-glium-renderer = "0.8.2"
imgui-winit-support = "0.8.2"
cgmath = "0.18.0"
tinyfiledialogs = "3.9.1"
image = "0.24.5"
